[workspace]
members = ["nozz-programs/*", "tests"]
resolver = "3"

[workspace.package]
version = "0.1.0"
rust-version = "1.93.1"
edition = "2024"
repository = "https://github.com/ap211unitech/soldelta"
authors = ["Arjun Porwal <porwalarjun95@gmail.com>"]
license = "MIT"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
