[package]
name = "nozz-dex"
description = "Created with Anchor"
version.workspace = true
edition.workspace = true
repository.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "lib"]
name = "nozz_dex"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = "0.32.1"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("solana"))',
] }
